--- a/parcerias.html
+++ b/parcerias.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,9 @@
     <title>Grude4J</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/animate.min.css" rel="stylesheet"> 
-    <link href="css/lightbox.css" rel="stylesheet"> 
-	<link href="css/main.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/lightbox.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/team.css" rel="stylesheet">
 
@@ -19,25 +20,75 @@
     <!--[if lt IE 9]>
 	    <script src="js/html5shiv.js"></script>
 	    <script src="js/respond.min.js"></script>
-    <![endif]-->       
-   
+    <![endif]-->
+
 </head>
+
 <body>
     <!-- navbar -->
     <nav id="navbar-example2" class="navbar navbar-fixed-top navBarFixa">
-        <header id="header">      
+        <header id="header">
             <div class="container">
-                    <a href="https://github.com/Grude4J/grude4jsite" target="_blank" class="github-corner" aria-label="View source on GitHub"><svg width="40" height="40" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0; left: calc(100% - 40px); z-index:99999;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+                <a href="https://github.com/Grude4J/grude4jsite" target="_blank" class="github-corner"
+                    aria-label="View source on GitHub"><svg width="40" height="40" viewBox="0 0 250 250"
+                        style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0; left: calc(100% - 40px); z-index:99999;"
+                        aria-hidden="true">
+                        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+                        <path
+                            d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+                            fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+                        <path
+                            d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+                            fill="currentColor" class="octo-body"></path>
+                    </svg></a>
+                <style>
+                    .github-corner:hover .octo-arm {
+                        animation: octocat-wave 560ms ease-in-out
+                    }
+
+                    @keyframes octocat-wave {
+
+                        0%,
+                        100% {
+                            transform: rotate(0)
+                        }
+
+                        20%,
+                        60% {
+                            transform: rotate(-25deg)
+                        }
+
+                        40%,
+                        80% {
+                            transform: rotate(10deg)
+                        }
+                    }
+
+                    @media (max-width:500px) {
+                        .github-corner:hover .octo-arm {
+                            animation: none
+                        }
+
+                        .github-corner .octo-arm {
+                            animation: octocat-wave 560ms ease-in-out
+                        }
+                    }
+                </style>
                 <A>
                     <div class="row">
                         <div class="col-sm-12 overflow">
                             <div class="social-icons pull-right">
                                 <ul class="nav nav-pills">
-                                    <li><a href="https://www.instagram.com/grude4joficial/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                                    <li><a href="https://www.youtube.com/channel/UCPeJeVKO9hgVdYPq3IT75Kg" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                                    <li><a href="https://www.facebook.com/Grude4J-304563140455709/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.instagram.com/grude4joficial/" target="_blank"><i
+                                                class="fa fa-instagram"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/company/grude4j/" target="_blank"><i
+                                                class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.youtube.com/channel/UCPeJeVKO9hgVdYPq3IT75Kg"
+                                            target="_blank"><i class="fa fa-youtube"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Grude4J-304563140455709/" target="_blank"><i
+                                                class="fa fa-facebook"></i></a></li>
                                 </ul>
-                            </div> 
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -45,18 +96,18 @@
                             margin-left: auto;
                             margin-right: auto;
                             width: 100%;
-                            max-width: 300px" alt="logo"  class="img-responsive" >
+                            max-width: 300px" alt="logo" class="img-responsive">
                     </div>
                     <div class="row">
                         <div class="col-sm-12 text-center">
-                            <a href="index.html"                                                     style = "white-space:PRE">  Home / Sobre </a>
-                            <a href="fundadores.html"                                                style = "white-space:PRE">  Fundadores   </a>
-                            <a href="eventos.html"                                                   style = "white-space:PRE">  Eventos      </a>
-                            <a href="membros.html"                                                   style = "white-space:PRE">  Membros      </a>
-                            <a href="mercado.html"                                                   style = "white-space:PRE">  Mercado      </a>
-                            <a href="iniciativas.html"                                               style = "white-space:PRE">  Iniciativas  </a>
-                            <a href="parcerias.html"                                                 style = "white-space:PRE">  Parcerias    </a>
-                            <a href="contato.html"                                                   style = "white-space:PRE">  Contato      </a>
+                            <a href="index.html" style="white-space:PRE"> Home / Sobre </a>
+                            <a href="fundadores.html" style="white-space:PRE"> Fundadores </a>
+                            <a href="eventos.html" style="white-space:PRE"> Eventos </a>
+                            <a href="membros.html" style="white-space:PRE"> Membros </a>
+                            <a href="mercado.html" style="white-space:PRE"> Mercado </a>
+                            <a href="iniciativas.html" style="white-space:PRE"> Iniciativas </a>
+                            <a href="parcerias.html" style="white-space:PRE"> Parcerias </a>
+                            <a href="contato.html" style="white-space:PRE"> Contato </a>
                         </div>
                     </div>
                 </A>
@@ -65,7 +116,7 @@
     </nav>
 
     <!-- conteudo geral -->
-    <div id="conteudo" class="container conteudo">        
+    <div id="conteudo" class="container conteudo">
         <!-- contato -->
         <section id="page-breadcrumb">
             <div class="vertical-center">
@@ -75,7 +126,8 @@
                             <div class="action">
                                 <div class="col-sm-12">
                                     <h1 class="title">Parcerias</h1>
-                                    <strong class="title">O ecossistema Java é composto de muito gente boa, disposta a faze-lo ficar cada vez melhor ainda.<BR>
+                                    <strong class="title">O ecossistema Java é composto de muito gente boa, disposta a
+                                        faze-lo ficar cada vez melhor ainda.<BR>
                                         Abaixo listamos alguns parceiros que ajudam a comunidade a fazer cada vez mais.
                                 </div>
                             </div>
@@ -89,18 +141,24 @@
         <section id="features">
             <div class="container">
                 <div class="row">
-                          
+
                     <div class="single-features">
                         <div class="col-sm-4   visivelApenasTelasPequenas" data--duration="500ms" data--delay="300ms">
                             <img src="images/jetbrains-variant-2.png" style="display: block;
                                 margin-left: auto;
                                 margin-right: auto;
                                 width: 100%;
-                                max-width: 300px" alt="logo"  class="img-responsive" >  
+                                max-width: 300px" alt="logo" class="img-responsive">
                         </div>
                         <div class="col-sm-7 col-sm-offset-1 align-right  " data--duration="500ms" data--delay="300ms">
                             <h2><a href="https://www.jetbrains.com/" target="_blank">Jetbrains</a></h2>
-                            <p>A Jetbrains é muito conhecida entre Javeiros por fornecer uma IDE de alta qualidade gratuita (versão community), o <a href="https://www.jetbrains.com/idea/" target="_blank">Jetbrains IntelliJ IDEA</a>. Ela ajuda a comunidade Grude4J e outras comunidades fornecendo licenças de 1 ano para a versões pagas de suas IDEs para serem sorteadas entre os membros da comunidade, através de seu programa <a href="https://www.jetbrains.com/community/user-groups/" target="_blank">Free License Programs</a>.
+                            <p>A Jetbrains é muito conhecida entre Javeiros por fornecer uma IDE de alta qualidade
+                                gratuita (versão community), o <a href="https://www.jetbrains.com/idea/"
+                                    target="_blank">Jetbrains IntelliJ IDEA</a>. Ela ajuda a comunidade Grude4J e outras
+                                comunidades fornecendo licenças de 1 ano para a versões pagas de suas IDEs para serem
+                                sorteadas entre os membros da comunidade, através de seu programa <a
+                                    href="https://www.jetbrains.com/community/user-groups/" target="_blank">Free License
+                                    Programs</a>.
                             </p>
                         </div>
                         <div class="col-sm-4   visivelApenasTelasGrandes" data--duration="500ms" data--delay="300ms">
@@ -108,20 +166,23 @@
                                 margin-left: auto;
                                 margin-right: auto;
                                 width: 100%;
-                                max-width: 300px" alt="logo"  class="img-responsive" >  
+                                max-width: 300px" alt="logo" class="img-responsive">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        
+
         <!-- footer -->
         <footer id="footer">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12">
-                        <div class="copyright-text text-center"> 
-                            <p>Adaptação do <a target="_blank" href="https://themehunt.com/item/1524992-triangle-free-responsive-creative-template"> <i>Triangle</i> template</a> desenhado por <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
+                        <div class="copyright-text text-center">
+                            <p>Adaptação do <a target="_blank"
+                                    href="https://themehunt.com/item/1524992-triangle-free-responsive-creative-template">
+                                    <i>Triangle</i> template</a> desenhado por <a target="_blank"
+                                    href="http://www.themeum.com">Themeum</a></p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +194,8 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>   
-    <script type="text/javascript" src="js/membros.js"></script> 
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/membros.js"></script>
 </body>
+
 </html>
